# the_project

./: .flake8  .pre-commit-config.yaml  README.md  mypy.ini  noxfile.py  pyproject.toml
config/: settings.py
the_project/: apps.py
