[tool.poetry]
name = "the_project"
version = "0.1.0"
description = ""
authors = ["Cristóbal Carnero Liñán <ccarnerolinan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
