[tool.poetry]
name = "the_project"
version = "0.1.0"
description = ""
authors = ["Cristóbal Carnero Liñán <ccarnerolinan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.0.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.3.0"
pytest = "^5.4.2"
coverage = {extras = ["toml"], version = "^5.1"}
flake8 = "^3.8.2"
flake8-bugbear = "^20.1.4"
mypy = "^0.770"
black = "^19.10b0"

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
